--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 
 <head>
     <meta charset="utf-8" />
     <title>SiteChattr</title>
 </head>
 
-<body>
-    <div id="site-chattr" class="h-full"></div>
+<body class="h-full bg-purple">
+    <div id="site-chattr" class="bg-purple-50 h-full"></div>
 </body>
 
 </html>
