--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="h-full">
+    <head>
+        <meta charset="utf-8" />
+        <title>SiteChattr</title>
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <title>SiteChattr</title>
-</head>
-
-<body class="h-full bg-purple">
-    <div id="site-chattr" class="bg-purple-50 h-full"></div>
-</body>
-
+    <body class="h-full bg-purple">
+        <div id="site-chattr" class="h-full bg-purple-50"></div>
+    </body>
 </html>
