--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" class="overflow-hidden h-full">
     <head>
         <meta charset="utf-8" />
         <title>SiteChattr</title>
     </head>
 
-    <body class="h-full bg-purple">
+    <body class="overflow-hidden h-full bg-purple">
         <div id="site-chattr" class="h-full bg-purple-50"></div>
     </body>
 </html>
